Update Open Graph and Twitter Card metadata

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <title>Precisa de Cobertura no Marketplace?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- METADADOS OPEN GRAPH PARA PRÉ-VISUALIZAÇÃO DE LINKS -->
   <meta property="og:title" content="Precisa de Cobertura no Marketplace para 2026?">
   <meta property="og:description" content="Converse por mensagem com um Especialista de Inscrição licenciado para explorar planos do Marketplace, comparar tarifas e verificar elegibilidade instantaneamente.">
   <meta property="og:image" content="./logo.png">
   <meta property="og:url" content="https://pmackiniv.github.io/vital-edge-portuguese/">
   <meta property="og:type" content="website">
-  <!-- TWITTER CARD -->
+
+  <!-- METADADOS TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Precisa de Cobertura no Marketplace para 2026?">
   <meta name="twitter:description" content="Converse por mensagem com um Especialista de Inscrição licenciado para explorar planos do Marketplace, comparar tarifas e verificar elegibilidade instantaneamente.">
   <meta name="twitter:image" content="./logo.png">
-  <!-- FONTS & STYLE -->
+
   <style>
     body {
       font-family: "Times New Roman", serif;
@@ -33,6 +35,12 @@
     .logo {
       width: 120px;
       height: auto;
+      margin: 0 auto 10px;
+    }
+    .headshot {
+      width: 120px;
+      height: auto;
+      border-radius: 50%;
       margin: 0 auto 10px;
     }
     h1 {
@@ -64,13 +72,16 @@
 <body>
   <div class="container">
     <img src="./logo.png" alt="Logo da Vital Edge Insurance" class="logo">
+    <img src="./patrick-mackin-headshot.png" alt="Retrato de Patrick Mackin IV — Especialista de Inscrição Licenciado" class="headshot">
     <h1>Precisa de Cobertura no Marketplace?</h1>
     <p>Converse por mensagem ou WhatsApp com um Especialista de Inscrição licenciado para conhecer suas opções de planos do Marketplace para 2026 e verificar sua elegibilidade de forma imediata.</p>
+
     <!-- BOTÕES DE AÇÃO -->
-    <a href="sms:+13522148879?&amp;body=Ol%C3%A1,%20gostaria%20de%20verificar%20minha%20eligibilidade%20no%20Marketplace." class="button sms-button">Enviar SMS para um Especialista</a>
-    <a href="https://wa.me/13522148879?text=Ol%C3%A1,%20gostaria%20de%20verificar%20minha%20eligibilidade%20no%20Marketplace." class="button whatsapp-button">Iniciar conversa no WhatsApp</a>
-    <a href="https://www.healthsherpa.com/?agent_id=patrick-mackin-iv&amp;_agent_id=patrick-mackin-iv" class="button eligibility-button">Verificar Elegibilidade Agora</a>
-    <a href="tel:+13522148879" class="button call-button">Ligar: (352) 214-8879</a>
+    <a href="sms:+13522148879?&body=Ol%C3%A1,%20gostaria%20de%20verificar%20minha%20eligibilidade%20no%20Marketplace." class="button">Enviar SMS para um Especialista</a>
+    <a href="https://wa.me/13522148879?text=Ol%C3%A1,%20gostaria%20de%20verificar%20minha%20eligibilidade%20no%20Marketplace." class="button">Iniciar conversa no WhatsApp</a>
+    <a href="https://www.healthsherpa.com/?agent_id=patrick-mackin-iv&_agent_id=patrick-mackin-iv" class="button">Verificar Elegibilidade Agora</a>
+    <a href="tel:+13522148879" class="button">Ligar: (352) 214‑8879</a>
+
     <!-- AVISO DE CONSENTIMENTO -->
     <div class="consent">
       Ao fornecer suas informações, você autoriza a Vital Edge Insurance e seus agentes a entrar em contato sobre opções de seguro do Marketplace. O consentimento é voluntário e pode ser revogado a qualquer momento. Tarifas de mensagens e dados podem ser aplicadas.
