--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
   <!-- METADADOS OPEN GRAPH PARA PRÉ-VISUALIZAÇÃO DE LINKS -->
   <meta property="og:title" content="Precisa de Cobertura no Marketplace para 2026?">
-  <meta property="og:description" content="Converse por mensagem com um Especialista de Inscrição licenciado para explorar planos do Marketplace, comparar tarifas e verificar elegibilidade instantaneamente.">
-  <meta property="og:image" content="./logo.png">
+  <meta property="og:description" content="Converse com um Especialista de Inscrição licenciado para explorar planos do Marketplace, comparar tarifas e verificar sua elegibilidade instantaneamente.">
+  <meta property="og:image" content="https://pmackiniv.github.io/vital-edge-portuguese/logo.png">
   <meta property="og:url" content="https://pmackiniv.github.io/vital-edge-portuguese/">
   <meta property="og:type" content="website">
 
   <!-- METADADOS TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Precisa de Cobertura no Marketplace para 2026?">
-  <meta name="twitter:description" content="Converse por mensagem com um Especialista de Inscrição licenciado para explorar planos do Marketplace, comparar tarifas e verificar elegibilidade instantaneamente.">
-  <meta name="twitter:image" content="./logo.png">
+  <meta name="twitter:description" content="Converse com um Especialista de Inscrição licenciado para explorar planos do Marketplace, comparar tarifas e verificar sua elegibilidade instantaneamente.">
+  <meta name="twitter:image" content="https://pmackiniv.github.io/vital-edge-portuguese/logo.png">
 
   <style>
     body {
@@ -38,33 +38,37 @@
       margin: 0 auto 10px;
     }
     .headshot {
-      width: 120px;
+      width: 140px;
       height: auto;
       border-radius: 50%;
       margin: 0 auto 10px;
     }
     h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
+      font-size: 26px;
+      margin-bottom: 15px;
     }
     p {
       font-size: 16px;
       margin-bottom: 20px;
+      line-height: 1.4;
     }
     .button {
       display: block;
       width: 100%;
       margin: 10px 0;
-      padding: 12px 20px;
+      padding: 14px 20px;
       font-size: 16px;
       color: #ffffff;
       background-color: #007bff;
       text-decoration: none;
       border-radius: 4px;
     }
+    .button:hover {
+      background-color: #0056b3;
+    }
     .consent {
       font-size: 12px;
-      color: #555555;
+      color: #555;
       margin-top: 20px;
     }
   </style>
@@ -76,13 +80,11 @@
     <h1>Precisa de Cobertura no Marketplace?</h1>
     <p>Converse por mensagem ou WhatsApp com um Especialista de Inscrição licenciado para conhecer suas opções de planos do Marketplace para 2026 e verificar sua elegibilidade de forma imediata.</p>
 
-    <!-- BOTÕES DE AÇÃO -->
-    <a href="sms:+13522148879?&body=Ol%C3%A1,%20gostaria%20de%20verificar%20minha%20eligibilidade%20no%20Marketplace." class="button">Enviar SMS para um Especialista</a>
-    <a href="https://wa.me/13522148879?text=Ol%C3%A1,%20gostaria%20de%20verificar%20minha%20eligibilidade%20no%20Marketplace." class="button">Iniciar conversa no WhatsApp</a>
+    <a href="sms:+13522148879?&body=Olá,%20gostaria%20de%20verificar%20minha%20elegibilidade%20no%20Marketplace." class="button">Enviar SMS para um Especialista</a>
+    <a href="https://wa.me/13522148879?text=Olá,%20gostaria%20de%20verificar%20minha%20elegibilidade%20no%20Marketplace." class="button">Iniciar conversa no WhatsApp</a>
     <a href="https://www.healthsherpa.com/?agent_id=patrick-mackin-iv&_agent_id=patrick-mackin-iv" class="button">Verificar Elegibilidade Agora</a>
     <a href="tel:+13522148879" class="button">Ligar: (352) 214‑8879</a>
 
-    <!-- AVISO DE CONSENTIMENTO -->
     <div class="consent">
       Ao fornecer suas informações, você autoriza a Vital Edge Insurance e seus agentes a entrar em contato sobre opções de seguro do Marketplace. O consentimento é voluntário e pode ser revogado a qualquer momento. Tarifas de mensagens e dados podem ser aplicadas.
     </div>
