--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 
   <!-- METADADOS OPEN GRAPH PARA PRÉ-VISUALIZAÇÃO DE LINKS -->
   <meta property="og:title" content="Precisa de Cobertura do Marketplace para 2026?">
-  <meta property="og:description" content="Converse via mensagem com um Especialista de Inscrição autorizado e verifique sua elegibilidade instantaneamente.">
+  <meta property="og:description" content="Converse via mensagem com um Especialista de Inscrição autorizado e verifique sua elegibilidade imediatamente.">
   <meta property="og:image" content="https://pmackiniv.github.io/vital-edge-portuguese/logo.png">
   <meta property="og:url" content="https://pmackiniv.github.io/vital-edge-portuguese/">
   <meta property="og:type" content="website">
-
-  <!-- METADADOS TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
+  <!-- Extra Twitter tags -->
   <meta name="twitter:title" content="Precisa de Cobertura do Marketplace para 2026?">
-  <meta name="twitter:description" content="Converse via mensagem com um Especialista de Inscrição autorizado e verifique sua elegibilidade instantaneamente.">
+  <meta name="twitter:description" content="Converse via mensagem com um Especialista de Inscrição autorizado e verifique sua elegibilidade imediatamente.">
   <meta name="twitter:image" content="https://pmackiniv.github.io/vital-edge-portuguese/logo.png">
 
   <style>
