Integrate Google Tag ManagerAdded GA4 tracking script + validated no interference with CMS compliance or WhatsApp preview card into index.html
Added Google Tag Manager scripts for tracking.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
   <meta property="og:url" content="https://pmackiniv.github.io/vital-edge-portuguese/">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
-  <!-- Extra Twitter tags -->
   <meta name="twitter:title" content="Precisa de Cobertura do Marketplace para 2026?">
   <meta name="twitter:description" content="Converse via mensagem com um Especialista de Inscrição autorizado e verifique sua elegibilidade imediatamente.">
   <meta name="twitter:image" content="https://pmackiniv.github.io/vital-edge-portuguese/logo.png">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VF5SZV8X8Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-VF5SZV8X8Z');
+  </script>
 
   <style>
     body { font-family: "Times New Roman", serif; margin:0; padding:0; text-align:center; background-color:#f5f5f5; }
